# olivka-darkbot

./: README.md
bot/: 1  Makefile  b64d.sh  b64e.sh  btc.sh  chk_os.sh  chkport.sh  config.status  def_info.sh  eeeee  euro.sh  grivna.sh  heb.sh  length.sh  meminfo1.sh  misc.sh  music_zloy.ex  music_zloy.sh  oil.sh  olivka  olivkactl  os_finger.sh  rubl.sh  run  searchpkg.sh  sudo_finger.ex  sun.sh  sysinfo1.sh  tgecho.sh  tgwebhook.sh  weather.sh
bot/NickServ/: auth.h
bot/dat/: alcohol1.rdb  android.1  anek.rdb  autotopic.ini  bastard.rdb  beer.rdb  callvovan.rdb  chastushka.rdb  chastushka2.rdb  coran.rdb  dateprefix1.rdb  dateprefix2.rdb  dateprefix3.rdb  donno.rdb.1  fuckoff.rdb  gimmeops.rdb  haiku.rdb  henice.rdb  hnykhnyk.rdb  info2.db  kamasutra.rdb  kamasutra_kto.rdb  kick_psalter.rdb  korni.rdb  latin_quote.rdb  latin_quote_n.rdb  me.rdb  no_cbn.rdb  (+48 more)
bot/source/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  bc.c  bc.h  bc1.c  color.c  color.h  darkbot.c  dates.c  dates.h  dbtools.cpp  dbtools.h  defcodes.h  defines.h  langtools.h  netpack.c  netpack.h  olivka  seen.cpp  seen.h  stdafx.h  tg.c  tg.h  translate.c  translate.h  tula.sh  urlc.h  vars.c  vera.h  version.h  victorina.h
bot/source/counters/: bc.c  bc.h  bc_dump  bc_dump.c  bc_dump_f  bc_dump_f.c  make
bot/source/dbtools/: a.out  dbtools.cpp  dbtools.h  main.c
bot/source/dev/: Makefile  hashfile.dx  main  main.cpp  perform.ini
bot/source/dev/mail_unix/: sendmail.c  sendmail.h  smail
bot/source/dict-tools/: 1111  c_to_java  c_to_java.c  c_to_java.c.sh  update_sowhat  update_sowhat.c  update_sowhat.c~  update_sowhat_make.sh  update_wtf.c
bot/source/langs/: ebonics.h  greek.h
bot/source/libs/1/: go  main  main.c
bot/source/rdb-tools/: 1.c  a.out  scan_rdb  scan_rdb.cpp
bot/source/smail/: mail_unix.tar.bz2  sendmail.c  sendmail.h
bot/source/tg/: main.c  make  tg.c  tg.h  tg_test_subst
bot/source/url_dump/: make  url_dump  url_dump.cpp  urlc.h
(+26 files in other folders)
